[package]
name = "client"
version = "0.1.0"
edition = "2021"
authors = ["Evan Boehs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = "1.0.119"
serde_json = "1.0.61"
serde_derive = "1.0.119"
envy = "0.4"
dotenvy = "0.15.7"
dirs = "5.0.0"
battery = "0.7.8"
